# numeris

./: .git-blame-ignore-revs  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  LICENSE  README.md  gen_plots.py  index.html  mkdocs.yml  sitemap.xml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
bench/: Cargo.toml  results.md
bench/benches/: comparison.rs  convolve.rs  fd_jacobian.rs  morphology.rs  rank.rs
control/: index.html
design/: index.html
docs/: control.md  design.md  dynmatrix.md  estimate.md  getting-started.md  imageproc.md  index.md  interp.md  linalg.md  matrix.md  no-std.md  ode.md  optim.md  performance.md  quad.md  quaternion.md  requirements.txt  special.md  stats.md
docs/examples/: gen_plots.py  gen_plots.rs  plot_interp.rs
docs/javascripts/: katex.js
docs/stylesheets/: extra.css
dynmatrix/: index.html
estimate/: index.html
examples/: gen_plots.rs  plot_ode.rs
getting-started/: index.html
includes/: plot_beta_pdf.html  plot_binomial_pmf.html  plot_continuous_cdf.html  plot_control.html  plot_gamma_pdf.html  plot_interp.html  plot_lead_lag.html  plot_normal_pdf.html  plot_ode.html  plot_poisson_pmf.html  plot_vanderpol.html
interp/: index.html
linalg/: index.html
matrix/: index.html
no-std/: index.html
ode/: index.html
optim/: index.html
performance/: index.html
quad/: index.html
quaternion/: index.html
search/: search_index.json
special/: index.html
src/: .serde_impl.rs.swp  fdiff.rs  lib.rs  macros.rs  nalgebra_interop.rs  prelude.rs  quaternion.rs  serde_impl.rs  traits.rs
src/control/: biquad.rs  butterworth.rs  chebyshev.rs  lead_lag.rs  mod.rs  pid.rs  pid_tune.rs  tests.rs
src/dynarr/: dynarr_err.rs  dynarr_funcs.rs  dynarr_impl.rs  dynarr_macros.rs  dynarr_ops.rs  dynarr_types.rs  mod.rs
src/dynmatrix/: aliases.rs  block.rs  dynmat_display.rs  dynmat_err.rs  dynmat_matrix_ops.rs  dynmat_ops.rs  linalg.rs  mixed_ops.rs  mod.rs  norm.rs  ops.rs  slice.rs  square.rs  util.rs  vector.rs
src/estimate/: batch.rs  cholupdate.rs  ckf.rs  ekf.rs  mod.rs  rts.rs  srukf.rs  tests.rs  ukf.rs
src/image/: filter.rs  impl_mono.rs  mod.rs  pixeltype.rs  rgb.rs
src/imageproc/: border.rs  canny.rs  connected.rs  convolve.rs  corners.rs  filters.rs  geometric.rs  integral.rs  kernels.rs  local_stats.rs  mod.rs  morphology.rs  multiscale.rs  pool.rs  rank.rs  resize.rs  tests.rs  threshold.rs
src/interp/: bilinear.rs  hermite.rs  lagrange.rs  linear.rs  mod.rs  spline.rs  tests.rs
src/linalg/: cholesky.rs  expm.rs  hessenberg.rs  lu.rs  mod.rs  qr.rs  schur.rs  svd.rs  symmetric_eigen.rs
src/matrix/: aliases.rs  block.rs  display.rs  macros.rs  mat_impl.rs  mat_ops.rs  mat_square_impl.rs  mod.rs  norm.rs  ops.rs  slice.rs  square.rs  svd.rs  types.rs  util.rs  vector.rs
src/ode/: adaptive.rs  matrix_impl.rs  mod.rs  ode_tests.rs  rk4.rs  rk_explicit.rs  rkf45.rs  rkts54.rs  rkv65.rs  rkv87.rs  rkv98.rs  rkv98_efficient.rs  rkv98_nointerp.rs  rodas4.rs  rosenbrock.rs  tests.rs  types.rs
src/optim/: bfgs.rs  dyn_optim.rs  gauss_newton.rs  jacobian.rs  levenberg_marquardt.rs  line_search.rs  mod.rs  root.rs  tests.rs
src/par/: mod.rs
src/quad/: mod.rs  tests.rs
src/quaternion/: mod.rs  quat_impl.rs  quat_ops.rs
src/simd/: f32_avx.rs  f32_avx512.rs  f32_neon.rs  f32_sse2.rs  f64_avx.rs  f64_avx512.rs  f64_neon.rs  f64_sse2.rs  mod.rs  scalar.rs
src/special/: beta_fn.rs  betainc.rs  digamma_fn.rs  erf_fn.rs  gamma_fn.rs  incgamma.rs  mod.rs  tests.rs
src/stats/: bernoulli.rs  beta_dist.rs  binomial.rs  chi_squared.rs  exponential.rs  gamma_dist.rs  mod.rs  normal.rs  poisson.rs  rng.rs  student_t.rs  tests.rs  uniform.rs
src/utils/: mod.rs
stats/: index.html
tests/: complex.rs
