[workspace]
members = [".", "bench"]

[package]
name = "numeris"
version = "0.2.3"
edition = "2021"
rust-version = "1.70"
description = "Pure-Rust numerical algorithms library — no-std compatible"
license = "MIT"
repository = "https://github.com/ssmichael1/numeris"
readme = "README.md"
keywords = ["math", "matrix", "linear-algebra", "ode", "quaternion"]
categories = ["mathematics", "no-std", "science"]
documentation = "https://docs.rs/numeris"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "ode"]
all = ["std", "ode", "optim", "control", "complex", "interp", "estimate", "special", "stats"]
control = []
estimate = ["alloc"]
interp = []
alloc = []
ode = []
optim = []
special = []
stats = ["special"]
std = ["alloc", "num-traits/std", "num-complex?/std"]
libm = ["num-traits/libm", "num-complex?/libm"]
complex = ["dep:num-complex"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.4", default-features = false, optional = true }

[[example]]
name = "plot_ode"
path = "docs/examples/plot_ode.rs"

[[example]]
name = "plot_interp"
path = "docs/examples/plot_interp.rs"
required-features = ["interp"]

[profile.test]
opt-level = 3
