[workspace]
members = [".", "bench"]

[package]
name = "numeris"
version = "0.5.2"
edition = "2021"
rust-version = "1.77"
description = "Pure-Rust numerical algorithms library — high performance with SIMD support while also supporting no-std for embedded and WASM targets."
license = "MIT"
repository = "https://github.com/ssmichael1/numeris"
readme = "README.md"
keywords = ["math", "matrix", "linear-algebra", "ode", "quaternion"]
categories = ["mathematics", "no-std", "science"]
documentation = "https://docs.rs/numeris"
homepage = "https://numeris-rs.dev/"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "ode"]
all = [
    "std",
    "ode",
    "optim",
    "quad",
    "control",
    "complex",
    "interp",
    "estimate",
    "special",
    "stats",
    "nalgebra",
]
control = []
estimate = ["alloc"]
interp = []
alloc = []
ode = []
optim = []
quad = []
special = []
stats = ["special"]
std = ["alloc", "num-traits/std", "num-complex?/std"]
libm = ["num-traits/libm", "num-complex?/libm"]
complex = ["dep:num-complex"]
nalgebra = ["dep:nalgebra", "nalgebra/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.4", default-features = false, optional = true }
nalgebra = { version = "0.33", default-features = false, optional = true }

[[example]]
name = "gen_plots"
path = "docs/examples/gen_plots.rs"
required-features = ["all"]

[profile.test]
opt-level = 3
